--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <p class="contenido"><i class="fa fa-chevron-right"></i> Tu pad se encuentra sin contenido</p>    
                 </div>
               </div>
-              <p class="tip"><i class="fa fa-cloud-download"></i> Podés descargar tus recursos <a href="http://dte.abc.gov.ar/padweb/descarga" target="_blank">acá</a></p>
+              <p class="tip"><i class="fa fa-cloud-download"></i> Podés descargar tus recursos <a id="toDownload" href="javascript:void(0)">acá</a></p>
               
               <p class="tip"><i class="fa fa-folder"></i>  Luego guardalos en la carpeta <strong><a id="selectDirectory" href="">"Contenidos pad"</a></strong></p>
               <input id="folder_dialog_input" type="file" nwdirectory value=""  style="display: none; font-size: 130%">
