--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
   }
   </script>
   
-<link href="/app.b266c2967bca6b71947f.css" rel="stylesheet"></head>
+<link href="/app.18867e014d9f550a6b58.css" rel="stylesheet"></head>
 <body ng-class="{home: $state.includes('main')}">
     <!--[if lt IE 9]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -80,6 +80,11 @@
     
     <ul class="extra-tool">
       <li ng-show="_mode==='desktop'">
+        <a id="to-folder" >
+          <i class="fa fa-folder fa-2x"></i>
+        </a>
+      </li>
+      <li ng-show="_mode==='desktop'">
         <a id="to-info"  >
           <i class="fa fa-sitemap fa-2x"></i>
         </a>
@@ -107,5 +112,5 @@
     <div class="bg-lock" class="showing">
       <div class="menu-roulette inactive" pad-menu-areas></div>
     </div>
-<script type="text/javascript" src="/vendor.b266c2967bca6b71947f.js"></script><script type="text/javascript" src="/polyfills.b266c2967bca6b71947f.js"></script><script type="text/javascript" src="/app.b266c2967bca6b71947f.js"></script></body>
+<script type="text/javascript" src="/vendor.18867e014d9f550a6b58.js"></script><script type="text/javascript" src="/polyfills.18867e014d9f550a6b58.js"></script><script type="text/javascript" src="/app.18867e014d9f550a6b58.js"></script></body>
 </html>
